Commit recent work

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -527,14 +527,6 @@ title = {Extending Harmonic-Percussive Separation of Audio Signals},
 url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
 }
 
-@inproceedings{beatnsgt,
-author = {Holzapfel, Andre and Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Flexer, Arthur},
-year = {2011},
-pages = {45-50},
-title = {Advantages of nonstationary gabor transforms in beat tacking},
-doi = {10.1145/2072529.2072542}
-}
-
 @article{demucs,
   title={Music Source Separation in the Waveform Domain},
   author={D{\'e}fossez, Alexandre and Usunier, Nicolas and Bottou, L{\'e}on and Bach, Francis},
@@ -594,4 +586,12 @@ author = {Shi, Ziqiang and Lin, Huibin and Liu, Liu and Liu, Rujie and Han, Jiqi
 year = {2019},
 pages = {},
 title = {Is CQT more suitable for monaural speech separation than STFT? an empirical study},
+}
+
+@inproceedings{variableq2,
+author = {Huang, Dong-Yan and Dong, Minghui and Li, Haizhou},
+year = {2015},
+month = {09},
+title = {A Real-Time Variable-Q Non-Stationary Gabor Transform for Pitch Shifting},
+booktitle = {INTERSPEECH -- 16th Annual Conference of the International Speech Communication Association}
 }
