--- a/latex/presentation01.tex
+++ b/latex/presentation01.tex
@@ -277,7 +277,7 @@
 		\item
 			Check oracle performance of controls -- different sizes of STFT (1024, 2048, 4096, 8192, 16384) - bss scores per source
 		\item
-			Use Bayesian Optimization to search for the best parameter of NSGT in oracle performance. Useful for finding good hyperparameters for an expensive objective function. \textbf{Scales}: mel, Bark, Constant-Q (log) -- Variable-Q is a work in progress (needs to be implemented). \textbf{Bins} between 12-384 (CQT/NSGT papers stop at 96 bins - no good reason why \href{https://github.com/grrrr/nsgt/issues/26}{https://github.com/grrrr/nsgt/issues/26}). \textbf{fmin} between 15Hz (5 below 20Hz pysychoacoustic limit) and 60Hz (to include 57Hz, which is from klapuri's CQT paper). \textbf{fmax} - set it fixed to Nyquist for best performance and to fix one parameter (otherwise parameter space would be too large) - should I play with it further? klapuri uses 14.7 kHz. test this range?
+			Use Bayesian Optimization to search for the best parameter of NSGT in oracle performance. Useful for finding good hyperparameters for an expensive objective function. \textbf{Scales}: mel, Bark, Constant-Q (log), Variable-Q (log + offset). \textbf{Bins} between 12-384 (CQT/NSGT papers stop at 96 bins - no good reason why \href{https://github.com/grrrr/nsgt/issues/26}{https://github.com/grrrr/nsgt/issues/26}). \textbf{fmin} between 15Hz (5 below 20Hz pysychoacoustic limit) and 60Hz (to include 57Hz, which is from klapuri's CQT paper). \textbf{fmax} - set it fixed to Nyquist for best performance and to fix one parameter (otherwise parameter space would be too large) - should I play with it further? klapuri uses 14.7 kHz. test this range?
 		\item
 			After oracles show that NSGT is promising/can beat STFT, adapt Open-Unmix to use NSGT -- train classic + NSGT and compare
 	\end{itemize}
